--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
     "@supabase/supabase-js": "^2.86.2",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.555.0",
+    "pdf-lib": "^1.17.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
